--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,12 +5,7 @@
 }
 
 body {
-  font: Arial, Helvetica, sans-serif;
+  font: 16px "Helvetica Neue", Arial, sans-serif;
 
-  background: #333;
-  color: #fff;
-
-  h1 {
-    font-size: 80px;
-  }
+  color: #121214;
 }
