--- a/src/styles/repositories.scss
+++ b/src/styles/repositories.scss
@@ -25,7 +25,7 @@ section.repository-list {
         justify-content: center;
         margin-top: 16px;
         text-decoration: none;
-        color: #8257e6;
+        color: #0eaf09;
         transition: all 0.2s;
         padding: 10px;
         border-radius: 5px;
@@ -35,8 +35,8 @@ section.repository-list {
 
         &:hover,
         &:focus {
-          box-shadow: inset 0 0 0 2em adjust-hue($color: #a587eb, $degrees: 20deg);
-          color: #000;
+          box-shadow: inset 0 0 0 2em adjust-hue($color: #84df81, $degrees: 20deg);
+          color: #444;
         }
       }
     }
